# camera_trap

./: CMakeLists.txt  readme.md
headers/: BackgroundExtractor.h  Barrier.h  ImageReader.h  ImageSaver.h  OpenMPBackgroundExtractor.h  ParallelBackgroundExtractor.h  PerformanceTester.h  Pixel.h  SequentialBackgroundExtractor.h  Types.h
src/: BackgroundExtractor.cpp  Barrier.cpp  ImageReader.cpp  ImageSaver.cpp  OpenMPBackgroundExtractor.cpp  ParallelBackgroundExtractor.cpp  PerformanceTester.cpp  SequentialBackgroundExtractor.cpp  main.cpp
